2011-05-06 Markus Malkusch <markus@malkusch.de>

    * Autoloader/index/AutoloaderIndex_File.php (AutoloaderIndex_File::saveRaw()):
    File based index's rights are set readable for everyone.

    * Autoloader/Autoloader.php (Autoloader::buildIndex()):
    Dominik Niehus reported a bug in Autoloader::buildIndex().
    AbstractAutoloader::normalizeClass() should also be used during building
    the index.

    * Autoloader/AutoloaderConfiguration.php (AutoloaderConfiguration::setConfigurationFile()):
    You may set a custom configuration file.

    * Autoloader/InstantAutoloader.php (InstantAutoloader):
    Instant autoloader as independet autoloader which can use
    an AutoloaderIndex_PHPArrayCode index.

    * Autoloader/index/AutoloaderIndex_PHPArrayCode.php (AutoloaderIndex_PHPArrayCode):
    Added comments to the generated PHP-array; So the index starts with <?php,
    which means that reading of the index changed. An index which was generated
    before that change is not compatible with the new class. It will lead to a
    fatal error.

2011-04-20 Markus Malkusch <markus@malkusch.de>

    * Autoloader/parser/AutoloaderFileParser_Tokenizer.php (AutoloaderFileParser_Tokenizer::getClassesInSource()):
    Volker von Hoesslin reported a bug when using PHP's "use" keyword.
    It confused the parser. Added a context to know what tokens are part of the
    namespace.

    * Autoloader/parser/AutoloaderFileParser_RegExp.php (AutoloaderFileParser_RegExp::getClassesInSource()):
    Fixed small bug when searching for namespaces.

2011-01-30 Markus Malkusch <markus@malkusch.de>

    * Autoloader/index/AutoloaderIndex_Memcache.php (AutoloaderIndex_Memcache):
    Implemented a memcache index

2010-09-05 Markus Malkusch <markus@malkusch.de>

    * Autoloader/AbstractAutoloader.php (AbstractAutoloader::_callClassConstructor()):
    An exception in a class constructor leads to an uncaught
    AutoloaderException_Include_ClassConstructor.
